[feat] Made contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,7 +41,7 @@
         </div>
         <section class="contact-section">
             <div class="wrapper">
-                <div class="input-info">
+                <div class="select-container">
                     <select name="subject" id="subject">
                         <option value="" selected disabled hidden>Select a subject</option>
                         <option value="product">Product Questions</option>
@@ -51,13 +51,17 @@
                         <option value="payment">Payment</option>
                         <option value="others">Other / General Feedbacks</option>
                     </select>
-                    <h2>Your Name</h2>
-                    <input type="text" name="name" id="name" placeholder="First and Last name">
-                    <h2>Your Email</h2>
-                    <input type="email" name="email" id="email" placeholder="abc@email.com">
-                    <h2>Your Message</h2>
-                    <textarea name="text" id="message" placeholder="Message"></textarea>
-                    <a href="#" class="submit-button">Submit</a>
+                </div>
+                <div class="content-container">
+                    <div class="input-info">
+                        <h2>Your Name</h2>
+                        <input type="text" name="name" id="name" placeholder="First and Last name">
+                        <h2>Your Email</h2>
+                        <input type="email" name="email" id="email" placeholder="abc@email.com">
+                        <h2>Your Message</h2>
+                        <textarea name="text" id="message" placeholder="Message"></textarea>
+                        <a href="#" class="submit-button">Submit</a>
+                    </div>
                 </div>
             </div>
         </section>
