[feat] Added accordion for quick q and a

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/desktop.css">
-    <link rel="stylesheet" href="./css/tablet.css">
     <link rel="stylesheet" href="./css/mobile.css">
-    <title>[PawsomeBites]</title>
+    <title>Welcome to PawsomeBites</title>
 </head>
 <body>
     <header>
@@ -38,7 +37,7 @@
                 <div class="wrapper">
                     
                     <div class="background-img">
-                        <img class="girl-with-dog" src="./assets/Dog-and-girl.jpg" alt="Girl hugging a dog">
+                        <img class="girl-with-dog" src="./assets/Dog-and-girl.webp" alt="Girl hugging a dog">
                         <div class="main-introduction">
                             <h1>Delight<br/>&nbsp;&nbsp;Your Pet</h1>
                             <p class="main-story">Welcome to the ultimate destination for your best friend's health and happiness.</p> 
@@ -88,6 +87,7 @@
                 </div>
             </div>
         </section>
+        <a href="#" class="top-button">Top</a>
     </main>
     
     <footer class="footer">
