--- a/pages/about.html
+++ b/pages/about.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/desktop.css">
-    <link rel="stylesheet" href="../css/tablet.css">
     <link rel="stylesheet" href="../css/mobile.css">
-    <title>Shop [PawsomeBites]</title>
+    <title>About [PawsomeBites]</title>
 </head>
 <body>
     <header>
@@ -101,6 +100,7 @@
                 </div>
             </div>
         </section>
+        <a href="#" class="top-button">Top</a>
     </main>
 
     <footer class="footer">
