--- a/pages/sale.html
+++ b/pages/sale.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/desktop.css">
-    <link rel="stylesheet" href="../css/tablet.css">
     <link rel="stylesheet" href="../css/mobile.css">
-    <title>Shop [PawsomeBites]</title>
+    <title>On Sale [PawsomeBites]</title>
 </head>
 <body>
     <header>
@@ -112,7 +111,7 @@
                             </div>
                             <div class="product-content">
                                 <h3>Summit Farmstead Feast Recipe for Dogs</h3>
-                                <p>$56.99 Now $39.99</p>
+                                <p><span class="original-price">$56.99</span> <span class="now">Now</span> $39.99</p>
                             </div>
                         </div>
                         <div class="product-container">
@@ -122,7 +121,7 @@
                             </div>
                             <div class="product-content">
                                 <h3>Honest Kitchen Grain Free Chicken Clusters</h3>
-                                <p>$119.99 Now $109.99</p>
+                                <p><span class="original-price">$119.99</span> <span class="now">Now</span> $109.99</p>
                             </div>
                         </div>
                         <div class="product-container">
@@ -132,7 +131,7 @@
                             </div>
                             <div class="product-content">
                                 <h3>Mammoth Squeaky Freaks Dog</h3>
-                                <p>$15.99 Now $13.69</p>
+                                <p><span class="original-price">$15.99</span> <span class="now">Now</span> $13.69</p>
                             </div>
                         </div>
                         <div class="product-container">
@@ -142,10 +141,7 @@
                             </div>
                             <div class="product-content">
                                 <h3>Inaba Churu Bites Chicken Recipe For Dogs</h3>
-                                <p>$12.49
-                                    Original price was: $12.49.
-                                    $9.99
-                                    Current price is: $9.99.</p>
+                                <p><span class="original-price">$12.49</span> <span class="now">Now</span> $9.99</p>
                             </div>
                         </div>
                         <div class="product-container">
@@ -155,20 +151,17 @@
                             </div>
                             <div class="product-content">
                                 <h3>Inaba Churu Rolls Chicken Recipe For Dogs</h3>
-                                <p>$12.49
-                                    Original price was: $12.49.
-                                    $9.99
-                                    Current price is: $9.99.</p>
+                                <p><span class="original-price">$12.49</span> <span class="now">Now</span> $9.99</p>
                             </div>
                         </div>
                         <div class="product-container">
-                            <img class="product-pic" src="../assets/769949601296_MAIN-300x300.jpg">
+                            <img class="product-pic" src="../assets/instainct-orange.jpg">
                             <div class="tag-container">
                                 <img class="sale-mark" src="../assets/sale2.png" alt="sale-mark">
                             </div>
                             <div class="product-content">
                                 <h3>Instinct Dog Freeze-Dried Raw Boost Mixers Gut Health Recipe</h3>
-                                <p>$21.99 Original price was: $21.99.$16.99</p>
+                                <p><span class="original-price">$21.99</span> <span class="now">Now</span> $16.99</p>
                             </div>
                         </div>
                         <div class="product-container">
@@ -178,10 +171,7 @@
                             </div>
                             <div class="product-content">
                                 <h3>Rascals Latex Big Ear Donkey 6.5″</h3>
-                                <p>$16.99
-                                    Original price was: $16.99.
-                                    $14.99
-                                    Current price is: $14.99.</p>
+                                <p><span class="original-price">$16.99</span> <span class="now">Now</span> $14.99</p>
                             </div>
                         </div>
                         <div class="product-container">
@@ -191,7 +181,7 @@
                             </div>
                             <div class="product-content">
                                 <h3>Go! Solutions Carnivore Dog Grain-Free Chicken Turkey & Duck Stew</h3>
-                                <p>$4.99 Original price was: $4.99.$2.69</p>
+                                <p><span class="original-price">$4.99</span> <span class="now">Now</span> $2.69</p>
                             </div>
                         </div>
                         <div class="product-container">
@@ -201,10 +191,7 @@
                             </div>
                             <div class="product-content">
                                 <h3>Inaba Churu Bites Chicken & Salmon Recipe For Dogs</h3>
-                                <p>$12.49
-                                    Original price was: $12.49.
-                                    $9.99
-                                    Current price is: $9.99.</p>
+                                <p><span class="original-price">$12.49</span> <span class="now">Now</span> $9.99</p>
                             </div>
                         </div>
                         <div class="product-container">
@@ -214,10 +201,7 @@
                             </div>
                             <div class="product-content">
                                 <h3>Fat Cat Floppability Dog Toy</h3>
-                                <p>$19.99
-                                    Original price was: $19.99.
-                                    $16.99
-                                    Current price is: $16.99.</p>
+                                <p><span class="original-price">$19.99</span> <span class="now">Now</span> $16.99</p>
                             </div>
                         </div>
                         <div class="product-container">
@@ -227,18 +211,14 @@
                             </div>
                             <div class="product-content">
                                 <h3>PetSport Jungle Monkey Assorted Dog Plush</h3>
-                                <p>$16.99
-                                    Original price was: $16.99.
-                                    $14.99
-                                    Current price is: $14.99.</p>
+                                <p><span class="original-price">$16.99</span> <span class="now">Now</span> $14.99</p>
                             </div>
                         </div>
-                    </div>
+                    </div>                    
                 </section>
             </div>
-            
         </div>
-        
+        <a href="#" class="top-button">Top</a>
     </main>
 
     <footer class="footer">
@@ -269,11 +249,11 @@
                 <div class="content">
                     <h3>Explorer</h3>
                     <ul class="explorer-info">
-                        <li>Shop</li>
-                        <li>Brands</li>
-                        <li>On sale</li>
-                        <li>About</li>
-                        <li>Contact</li>
+                        <li><a href="./shop.html">Shop</a></li>
+                        <li><a href="./brands.html">Brands</a></li>
+                        <li><a href="#">On sale</a></li>
+                        <li><a href="./about.html">About</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
 
