--- a/pages/shop.html
+++ b/pages/shop.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/desktop.css">
-    <link rel="stylesheet" href="../css/tablet.css">
     <link rel="stylesheet" href="../css/mobile.css">
     <title>Shop [PawsomeBites]</title>
 </head>
@@ -149,6 +148,7 @@
                 </div>
             </div>
         </section>
+        <a href="#" class="top-button">Top</a>
     </main>
 
     <footer class="footer">
@@ -179,11 +179,11 @@
                 <div class="content">
                     <h3>Explorer</h3>
                     <ul class="explorer-info">
-                        <li>Shop</li>
-                        <li>Brands</li>
-                        <li>On sale</li>
-                        <li>About</li>
-                        <li>Contact</li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="./brands.html">Brands</a></li>
+                        <li><a href="./sale.html">On sale</a></li>
+                        <li><a href="./about.html">About</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
 
