--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/desktop.css">
-    <link rel="stylesheet" href="../css/tablet.css">
     <link rel="stylesheet" href="../css/mobile.css">
-    <title>Shop [PawsomeBites]</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <title>Help&Contact [PawsomeBites]</title>
 </head>
 <body>
     <header>
@@ -39,6 +40,79 @@
                 <p>Do you have comments or questions? Just want to say hello? We’d love to hear from you. Fill out the form below, and we’ll connect with you soon.</p>
             </div>
         </div>
+
+        <div class="container mt-5">
+            <div class="accordion-container">
+                <div class="accordion accordion-flush">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                Forgot Your Password?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                If you forgot your password, sign in and click 'forgot password?' Enter the email address associated with your account, then click 'send.' We will send you a link via email to reset your password. Please allow a few minutes for the request. You will have 24 hours to reset your password using the link provided in the email. If your link has expired, request a new link by following the same steps above.<br><br>
+                                If you were unable to reset your password or you didn't receive an email notification, please contact us via e-mail or phone at (604) 899-4480.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                Order Cancellations
+                            </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                Once an order is processing, we are unable to change or cancel it. Our system is designed to process and ship orders. For any questions, please contact Customer Service online or call 888-839-9638.<br><br>
+                                In rare instances, we may need to cancel all or part of an order for various reasons, including:<br>
+                                <ul>
+                                    <li>Unavailable product(s)</li>
+                                    <li>Difficulty in processing your payment information</li>
+                                    <li>Inability to ship to address provided</li>
+                                    <li>Existence of a duplicate order</li>
+                                </ul>
+                                If your order is cancelled, you will receive an e-mail notification. You will not be billed for any cancelled products. Once an order is cancelled, it cannot be reprocessed and must be submitted again on our website.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                Shipping
+                            </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                When adding items to your cart, choose ‘Ship to Me' by clicking on ‘check availability in my area’. You will be prompted to enter the postal code where your items will ship to. Standard Shipping is available across all Canadian provinces except Quebec. Special order items or shipments to rural addresses may exceed the standard shipping delivery window and may not be available for Ship to Home. Shipments are not available to post office box addresses.<br><br>
+                                Live pets, canned, fresh or frozen foods, select cat litters, aquariums and other select products may not be eligible for shipping. Shipping costs are based on the products ordered. Due to size and/or weight, certain items bear a shipping surcharge or special handling fee, which will still apply. Total shipping charges are automatically calculated during Checkout prior to completing your order. If your order qualifies for free shipping($49 and above before taxes, with Treats™ membership), your discount will appear in the Order Summary.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                                Payment Options
+                            </button>
+                        </h2>
+                        <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                At petsmart.ca, we accept all major forms of credit cards, as well as several other forms of payment:
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="contact-form-before">
+            <div class="wrapper">
+                <h2>Didn't find the answer you were looking for?</h2>
+                <p>If you didn't find the answer you were looking for, please contact us using the form below:</p>
+            </div>
+        </div>
+
         <section class="contact-section">
             <div class="wrapper">
                 <div class="select-container">
@@ -65,6 +139,7 @@
                 </div>
             </div>
         </section>
+        <a href="#" class="top-button">Top</a>
     </main>
 
     <footer class="footer">
@@ -119,5 +194,9 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
