--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,6 +8,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <title>Help&Contact [PawsomeBites]</title>
+    <style>
+        img, ul, li, nav, div, html, body, a {
+            margin: 0;
+            padding: 0;
+            border: 0;
+            font-size: 100%;
+            font: inherit;
+            vertical-align: baseline;
+        }
+        a {
+            text-decoration: none;
+        }
+        .heading-top {
+            font-weight: bold;
+        }
+        .icon-nav {
+            display: flex;
+            .horizontal-list {
+                li {
+                    margin-left: 10px;
+                    img {
+                        width: 17px;
+                        margin-right: 10px;
+                    }
+                }
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
