[feat] Added hamburger

--- a/pages/404.html
+++ b/pages/404.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/desktop.css">
+    <link rel="stylesheet" href="../css/tablet.css">
     <link rel="stylesheet" href="../css/mobile.css">
     <title>Page Not Found</title>
 </head>
@@ -13,7 +14,7 @@
             <a class="header-home" href="../index.html" ><img src="../assets/pawprint.png" alt="Logo">PawsomeBites</a>
             <div></div>
             <nav class="main-nav">
-                <ul class="horizontal-list">
+                <ul class="link-list">
                     <li><a href="./shop.html">Shop</a></li>
                     <li><a href="./brands.html">Brands</a></li>
                     <li><a href="#">On sale</a></li>
@@ -26,6 +27,19 @@
                     <li><img src="../assets/user.png" alt="User icon"></li>
                     <li><img src="../assets/heart.png" alt="Heart icon"></li>
                     <li><img src="../assets/shopping-cart.png" alt="Shopping cart icon"></li>
+                    <li class="menu">
+                        <label for="menu-toggle"><img src="../assets/menu-burger.png" alt="Menu bar"></label>
+                        <input type="checkbox" class="menu-toggle" id="menu-toggle">
+                        <nav class="toggle-nav">
+                            <ul class="link-list">
+                                <li><a href="./shop.html">Shop</a></li>
+                                <li><a href="./brands.html">Brands</a></li>
+                                <li><a href="#">On sale</a></li>
+                                <li><a href="./about.html">About</a></li>
+                                <li><a href="./contact.html">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -82,10 +96,10 @@
                 <div class="content">
                     <h3>Follow us</h3>
                     <ul class="socials">
-                        <li><img src="../assets/Social3.png" alt="Instagram"></li>
-                        <li><img src="../assets/Social4.png" alt="Linked-in"></li>
-                        <li><img src="../assets/facebook-24.png" alt="Facebook"></li>
-                        <li><img src="../assets/twitter-24.png" alt="Twitter"></li>
+                        <li><a href="http://instagram.com"><img src="../assets/Social3.png" alt="Instagram"></a></li>
+                        <li><a href="http://linkedin.com"><img src="../assets/Social4.png" alt="Linked-in"></a></li>
+                        <li><a href="http://facebook.com"><img src="../assets/facebook-24.png" alt="Facebook"></a></li>
+                        <li><a href="http://twitter.com"><img src="../assets/twitter-24.png" alt="Twitter"></a></li>
                     </ul>
                 </div>          
             </div>
