--- a/pages/brands.html
+++ b/pages/brands.html
@@ -402,14 +402,14 @@
                 <div class="content">
                     <h3>Follow us</h3>
                     <ul class="socials">
-                        <li><img src="../assets/Social3.png" alt="Instagram"></li>
-                        <li><img src="../assets/Social4.png" alt="Linked-in"></li>
-                        <li><img src="../assets/facebook-24.png" alt="Facebook"></li>
-                        <li><img src="../assets/twitter-24.png" alt="Twitter"></li>
+                        <li><a href="http://instagram.com"><img src="../assets/Social3.png" alt="Instagram"></a></li>
+                        <li><a href="http://linkedin.com"><img src="../assets/Social4.png" alt="Linked-in"></a></li>
+                        <li><a href="http://facebook.com"><img src="../assets/facebook-24.png" alt="Facebook"></a></li>
+                        <li><a href="http://twitter.com"><img src="../assets/twitter-24.png" alt="Twitter"></a></li>
                     </ul>
                 </div>          
             </div>
-
+            
             <div class="copy-right">
                 &copy; 2024 My website, All Rights Reserved
             </div>
