[feat] Added webp files and 404 mobile version

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a class="header-home" href="#" ><img src="./assets/pawprint.png" alt="Logo">PawsomeBites</a>
             <div></div>
             <nav class="main-nav">
-                <ul class="horizontal-list">
+                <ul class="link-list">
                     <li><a href="./pages/shop.html">Shop</a></li>
                     <li><a href="./pages/brands.html">Brands</a></li>
                     <li><a href="./pages/sale.html">On sale</a></li>
