--- a/pages/404.html
+++ b/pages/404.html
@@ -45,14 +45,19 @@
         </div>
     </header>
 
-    <div class="container">
+    <div class="error-container">
         <div class="wrapper">
+            <div class="dots">
+                <div class="dot" id="dot1"></div>
+                <div class="dot" id="dot2"></div>
+                <div class="dot" id="dot3"></div>
+            </div>
             <h1>404</h1>
             <h2>Page Not Found</h2>
             <div class="error-msg">
                 <h3>So Sorry!</h3>
                 <p>The page you are looking for cannot be found</p>
-            </div> 
+            </div>
         </div>
         <a href="/" class="home-link">Go to Homepage</a>
     </div>
