--- a/pages/contact.html
+++ b/pages/contact.html
@@ -156,11 +156,11 @@
                 </div>
                 <div class="content-container">
                     <div class="input-info">
-                        <h2>Your Name</h2>
+                        <label for="username">Your Name</label>
                         <input type="text" name="name" id="name" placeholder="First and Last name">
-                        <h2>Your Email</h2>
+                        <label for="email">Your Email</label>
                         <input type="email" name="email" id="email" placeholder="abc@email.com">
-                        <h2>Your Message</h2>
+                        <label for="message">Your Message</label>
                         <textarea name="text" id="message" placeholder="Message"></textarea>
                         <a href="#" class="submit-button">Submit</a>
                     </div>
