--- a/pages/brands.html
+++ b/pages/brands.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../css/desktop.css">
+    <link rel="stylesheet" href="../css/tablet.css">
     <link rel="stylesheet" href="../css/mobile.css">
     <title>Brands [PawsomeBites]</title>
 </head>
@@ -14,7 +15,7 @@
             <a class="header-home" href="../index.html" ><img src="../assets/pawprint.png" alt="Logo">PawsomeBites</a>
             <div></div>
             <nav class="main-nav">
-                <ul class="horizontal-list">
+                <ul class="link-list">
                     <li><a href="./shop.html">Shop</a></li>
                     <li><a href="#">Brands</a></li>
                     <li><a href="./sale.html">On sale</a></li>
@@ -27,6 +28,19 @@
                     <li><img src="../assets/user.png" alt="User icon"></li>
                     <li><img src="../assets/heart.png" alt="Heart icon"></li>
                     <li><img src="../assets/shopping-cart.png" alt="Shopping cart icon"></li>
+                    <li class="menu">
+                        <label for="menu-toggle"><img src="../assets/menu-burger.png" alt="Menu bar"></label>
+                        <input type="checkbox" class="menu-toggle" id="menu-toggle">
+                        <nav class="toggle-nav">
+                            <ul class="link-list">
+                                <li><a href="./shop.html">Shop</a></li>
+                                <li><a href="#">Brands</a></li>
+                                <li><a href="./sale.html">On sale</a></li>
+                                <li><a href="./about.html">About</a></li>
+                                <li><a href="./contact.html">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -409,7 +423,7 @@
                     </ul>
                 </div>          
             </div>
-            
+
             <div class="copy-right">
                 &copy; 2024 My website, All Rights Reserved
             </div>
