--- a/pages/sale.html
+++ b/pages/sale.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/desktop.css">
+    <link rel="stylesheet" href="../css/tablet.css">
     <link rel="stylesheet" href="../css/mobile.css">
     <title>On Sale [PawsomeBites]</title>
 </head>
@@ -13,7 +14,7 @@
             <a class="header-home" href="../index.html" ><img src="../assets/pawprint.png" alt="Logo">PawsomeBites</a>
             <div></div>
             <nav class="main-nav">
-                <ul class="horizontal-list">
+                <ul class="link-list">
                     <li><a href="./shop.html">Shop</a></li>
                     <li><a href="./brands.html">Brands</a></li>
                     <li><a href="#">On sale</a></li>
@@ -26,6 +27,19 @@
                     <li><img src="../assets/user.png" alt="User icon"></li>
                     <li><img src="../assets/heart.png" alt="Heart icon"></li>
                     <li><img src="../assets/shopping-cart.png" alt="Shopping cart icon"></li>
+                    <li class="menu">
+                        <label for="menu-toggle"><img src="../assets/menu-burger.png" alt="Menu bar"></label>
+                        <input type="checkbox" class="menu-toggle" id="menu-toggle">
+                        <nav class="toggle-nav">
+                            <ul class="link-list">
+                                <li><a href="./shop.html">Shop</a></li>
+                                <li><a href="./brands.html">Brands</a></li>
+                                <li><a href="#">On sale</a></li>
+                                <li><a href="./about.html">About</a></li>
+                                <li><a href="./contact.html">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </li>
                 </ul>
             </nav>
         </div>
