[feat] Styling index.html for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="home-section-2">
             <div class="home-main-middle">
                 <div class="wrapper">
-                    <img src="./assets/Cozy Sleeping Dog.jpg" alt="Cozy Sleeping Dog">
+                    <img class="round-dog" src="./assets/Cozy.jpg" alt="Cozy Sleeping Dog">
                 
                     <div class="shopping-introduction">
                         <p class="main-story">Discover a curated selection of<br/> premium pet food and treats,<br/> ensuring every bite brings joy and well-being to your beloved pet.</p> 
