[fix] Fixed html and css styling for validation check

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/desktop.css">
-    <link rel="stylesheet" href="../css/tablet.css">
-    <link rel="stylesheet" href="./css/mobile.css">
+    <link rel="stylesheet" type="text/css" href="./css/desktop.css">
+    <link rel="stylesheet" type="text/css" href="../css/tablet.css">
+    <link rel="stylesheet" type="text/css" href="./css/mobile.css">
     <title>Welcome to PawsomeBites</title>
 </head>
 <body>
@@ -46,7 +46,7 @@
     </header>
 
     <main>
-        <section class="home-section-1">
+        <section class="hero-section">
             <div class="home-main-top">
                 <div class="wrapper">
                     
