--- a/pages/404.html
+++ b/pages/404.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/desktop.css">
-    <link rel="stylesheet" href="../css/tablet.css">
-    <link rel="stylesheet" href="../css/mobile.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost/css/desktop.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost/css/tablet.css">
+    <link rel="stylesheet" type="text/css" href="../css/mobile.css">
     <title>Page Not Found</title>
 </head>
 <body>
@@ -101,10 +101,10 @@
                 <div class="content">
                     <h3>Follow us</h3>
                     <ul class="socials">
-                        <li><a href="http://instagram.com"><img src="../assets/Social3.png" alt="Instagram"></a></li>
-                        <li><a href="http://linkedin.com"><img src="../assets/Social4.png" alt="Linked-in"></a></li>
-                        <li><a href="http://facebook.com"><img src="../assets/facebook-24.png" alt="Facebook"></a></li>
-                        <li><a href="http://twitter.com"><img src="../assets/twitter-24.png" alt="Twitter"></a></li>
+                        <li><a href="http://instagram.com" type="text/css"><img src="../assets/Social3.png" alt="Instagram"></a></li>
+                        <li><a href="http://linkedin.com" type="text/css"><img src="../assets/Social4.png" alt="Linked-in"></a></li>
+                        <li><a href="http://facebook.com" type="text/css"><img src="../assets/facebook-24.png" alt="Facebook"></a></li>
+                        <li><a href="http://twitter.com" type="text/css"><img src="../assets/twitter-24.png" alt="Twitter"></a></li>
                     </ul>
                 </div>          
             </div>
