--- a/pages/sale.html
+++ b/pages/sale.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/desktop.css">
-    <link rel="stylesheet" href="../css/tablet.css">
-    <link rel="stylesheet" href="../css/mobile.css">
+    <link rel="stylesheet" type="text/css" href="../css/desktop.css">
+    <link rel="stylesheet" type="text/css" href="../css/tablet.css">
+    <link rel="stylesheet" type="text/css" href="../css/mobile.css">
     <title>On Sale [PawsomeBites]</title>
 </head>
 <body>
@@ -55,7 +55,7 @@
         
         <div class="sale-container">
             <div class="wrapper">
-                <section class="sale-aside">
+                <aside class="sale-aside">
                     <div class="filters">
                         <h3>Filters</h3>
                         <div class="dropdown">
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </aside>
             
                 <section class="sale-section-1">
                     <h2 class="heading-middle">Products on sale</h2>
