--- a/pages/brands.html
+++ b/pages/brands.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="../css/desktop.css">
-    <link rel="stylesheet" href="../css/tablet.css">
-    <link rel="stylesheet" href="../css/mobile.css">
+    <link rel="stylesheet" type="text/css" href="../css/desktop.css">
+    <link rel="stylesheet" type="text/css" href="../css/tablet.css">
+    <link rel="stylesheet" type="text/css" href="../css/mobile.css">
     <title>Brands [PawsomeBites]</title>
 </head>
 <body>  
