--- a/pages/404.html
+++ b/pages/404.html
@@ -55,7 +55,7 @@
             <h1>404</h1>
             <h2>Page Not Found</h2>
             <div class="error-msg">
-                <h3>So Sorry!</h3>
+                <h3><strong>So Sorry!</strong></h3>
                 <p>The page you are looking for cannot be found</p>
             </div>
         </div>
