[feat] Styling sale page for mobile and tablet

--- a/pages/sale.html
+++ b/pages/sale.html
@@ -57,59 +57,55 @@
             <div class="wrapper">
                 <aside class="sale-aside">
                     <div class="filters">
-                        <h3>Filters</h3>
-                        <div class="dropdown">
-                            <button class="dropbtn">Brand<img src="../assets/angle-small-down.png" alt="dropdown button"></button>
-                            <div class="dropdown-content">
-                                <div class="each-input">
-                                    <input type="checkbox" id="balance" name="balance" value="Balance">
-                                    <label for="balance">Balanced Life</label><br>
-                                </div>
-                                <div class="each-input">
-                                    <input type="checkbox" id="hill" name="hill" value="Hill">
-                                    <label for="hill">Hill</label><br>
-                                </div>
-                                <div class="each-input">
-                                    <input type="checkbox" id="k9" name="k9" value="K9">
-                                    <label for="k9">K9 Natural</label><br>
-                                </div>
-                                <div class="each-input">
-                                    <input type="checkbox" id="go" name="go" value="go">
-                                    <label for="go">Go!</label><br>
-                                </div>
-                                <div class="each-input">
-                                    <input type="checkbox" id="orijen" name="orijen" value="Orijen">
-                                    <label for="orijen">Orijen</label><br>
-                                </div>
-                                <div class="each-input">
-                                    <input type="checkbox" id="summit" name="summit" value="Summit">
-                                    <label for="summit">Summit</label><br>
-                                </div>
-                                <div class="each-input">
-                                    <input type="checkbox" id="honest" name="honest" value="Honest-kitchen">
-                                    <label for="honest">Honest Kitchen</label><br>
+                        <div class="title">
+                            <h3>Filters</h3>
+                        </div>
+                        <div class="dropdown-container">
+                            <div class="dropdown">
+                                <button class="dropbtn">Brand<img src="../assets/angle-small-down.png" alt="dropdown button"></button>
+                                <div class="dropdown-content">
+                                    <div class="each-input">
+                                        <input type="checkbox" id="hill" name="hill" value="Hill">
+                                        <label for="hill">Hill</label><br>
+                                    </div>
+                                    <div class="each-input">
+                                        <input type="checkbox" id="k9" name="k9" value="K9">
+                                        <label for="k9">K9 Natural</label><br>
+                                    </div>
+                                    <div class="each-input">
+                                        <input type="checkbox" id="go" name="go" value="go">
+                                        <label for="go">Go!</label><br>
+                                    </div>
+                                    <div class="each-input">
+                                        <input type="checkbox" id="orijen" name="orijen" value="Orijen">
+                                        <label for="orijen">Orijen</label><br>
+                                    </div>
+                                    <div class="each-input">
+                                        <input type="checkbox" id="summit" name="summit" value="Summit">
+                                        <label for="summit">Summit</label><br>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="dropdown">
-                            <button class="dropbtn">Product type<img src="../assets/angle-small-down.png" alt="dropdown button"></button>
-                            <div class="dropdown-content">
-                                <div class="each-input">
-                                    <input type="checkbox" id="dog-food" name="dog-food" value="Dog-food">
-                                    <label for="dog-food">Dog Food</label><br>
+                            <div class="dropdown">
+                                <button class="dropbtn">Product type<img src="../assets/angle-small-down.png" alt="dropdown button"></button>
+                                <div class="dropdown-content">
+                                    <div class="each-input">
+                                        <input type="checkbox" id="dog-food" name="dog-food" value="Dog-food">
+                                        <label for="dog-food">Dog Food</label><br>
+                                    </div>
+                                    <div class="each-input">
+                                        <input type="checkbox" id="cat-food" name="cat-food" value="Cat-food">
+                                        <label for="cat-food">Cat Food</label><br>
+                                    </div>
+                                    
                                 </div>
-                                <div class="each-input">
-                                    <input type="checkbox" id="cat-food" name="cat-food" value="Cat-food">
-                                    <label for="cat-food">Cat Food</label><br>
-                                </div>
-                                
                             </div>
-                        </div>
-                        <div class="dropdown">
-                            <button class="dropbtn">Availability<img src="../assets/angle-small-down.png" alt="dropdown button"></button>
-                            <div class="dropdown-content">
-                                <input type="checkbox" id="in-stock" name="in-stock" value="In-stock">
-                                <label for="in-stock">In stock</label><br>
+                            <div class="dropdown">
+                                <button class="dropbtn">Availability<img src="../assets/angle-small-down.png" alt="dropdown button"></button>
+                                <div class="dropdown-content">
+                                    <input type="checkbox" id="in-stock" name="in-stock" value="In-stock">
+                                    <label for="in-stock">In stock</label><br>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -228,9 +224,12 @@
                                 <p><span class="original-price">$16.99</span> <span class="now">Now</span> $14.99</p>
                             </div>
                         </div>
-                    </div>                    
+                        <div class="product-container-button">
+                            <button class="more-button"><a href="#">See more</a></button>
+                        </div>
+                    </div>  
                 </section>
-            </div>
+            </div>                  
         </div>
         <a href="#" class="top-button">Top</a>
     </main>
