[fix] Contact page header link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </header>
 
     <main>
-        <section class="hero-section">
+        <section class="home-section-1">
             <div class="home-main-top">
                 <div class="wrapper">
                     
