--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,6 +17,7 @@
             font-size: 100%;
             font: inherit;
             vertical-align: baseline;
+            text-decoration: none;
         }
         a {
             text-decoration: none;
@@ -171,7 +172,7 @@
                 <div class="content-container">
                     <div class="input-info">
                         <label for="username">Your Name</label>
-                        <input type="text" name="name" id="name" placeholder="First and Last name">
+                        <input type="text" name="name" id="name" placeholder="Full name">
                         <label for="email">Your Email</label>
                         <input type="email" name="email" id="email" placeholder="abc@email.com">
                         <label for="message">Your Message</label>
